<resources>
    <string name="app_name">ALC</string>
    <string name="btn_1">ABOUT ALC</string>
    <string name="btn_2">MY PROFILE</string>
    <string name="home_nav">ALC 4 Phase 1</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="back">Back Buton</string>
    <string name="abt_alc">About ALC</string>
    <string name="retry">Try Again</string>
    <string name="error_message">Error occured, please check your internet connecion.</string>
    <string name="notification_error_ssl_cert_invalid">SSL Error! Give Permission</string>
    <string name="exit_app">Do you want to  exit this application?</string>
    <string name="mypix">Osanyinpeju  Hammed Image</string>
    <string name="myname">Hammed Olalekan Osanyinpeju</string>
    <string name="myprofile">My Profile</string>

</resources>
