<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#3359DF"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="9dp"
            android:contentDescription="@string/back"
            android:onClick="home"
            app:srcCompat="@drawable/ic_back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="5dp"
            android:text="@string/myprofile"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-thin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:orientation="vertical"

    >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp"

                >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/osanyinpejuhammed"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/mypix"
                />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/myname"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif-thin"
                    android:layout_gravity="center_horizontal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#444444"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">

                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="30dp"
                    android:text="Track:     Android"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif-thin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="30dp"
                    android:text="Country:    Nigeria"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif-thin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="30dp"
                    android:text="Email:   osanyinpejuhammed35@gmail.com"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif-thin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="30dp"
                    android:text="Phone Number:   2347061855688"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif-thin" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="30dp"
                    android:text="Slack Username:   @Hammed Olalekan Osanyinpeju"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif-thin"/>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</RelativeLayout>